--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <section class="Photo">
         <h2>CV :</h2>
-        <img src="images/photo.jpg" alt="photo" height="200" width="200"><img/>
+        <img src="images/photo1.jpg" alt="photo" height="200" width="200"><img/>
         </section>
             
 
