--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <section class="A-propos" id="pas de flex">
             <h3>A propos :</h3>
             
-            <p>Loisirs :<br/>Yu-Gi-Oh, jeux de Versus, jeux de rythme, mangas de Go Nagai, animés de Science Saru, ...</p>
+            <p>Loisirs :<br/>Yu-Gi-Oh, jeux de Versus (Street Fighter 2/Smash/...), <br/> Jeux de rythme (Taiko/DDR/Theatrhythm) <br/>, <br/> Consoles Mortes (PC-Engine/Naomi/NEO GEO/Gamecube/PS2), <br/> Mangas/Animés (voir Nautiljon), ...</p>
             <p>Lorem ipsum : <br/>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </section>
