--- a/index.html
+++ b/index.html
@@ -79,6 +79,14 @@
                         <td>Bidouille</td>
                         <td>légende</td>
                     </tr>
+                    <tr>
+                        <td>Travail Collaboratif</td>
+                        <td>Expert</td>
+                    </tr>
+                    <tr>
+                        <td>Acharnement</td>
+                        <td>oui.</td>
+                    </tr>
                 </tbody>
             </table>
         </section>
@@ -96,7 +104,7 @@
         <section class="A-propos" id="pas de flex">
             <h3>A propos :</h3>
             
-            <p>Loisirs :<br/>Yu-Gi-Oh, jeux de Versus (Street Fighter 2/Smash/...), <br/> Jeux de rythme (Taiko/DDR/Theatrhythm), <br/> Consoles Mortes (PC-Engine/Naomi/NEO GEO/Gamecube/PS2), <br/> Mangas/Animés (voir Nautiljon), ...</p>
+            <p>Loisirs :<br/>Yu-Gi-Oh, Jeux de Versus (Street Fighter 2/Smash/...), <br/> Jeux de rythme (Taiko/DDR/Theatrhythm), <br/> Consoles Mortes (PC-Engine/Naomi/NEO GEO/Gamecube/PS2), <br/> Mangas/Animés (voir Nautiljon), ...</p>
             <p>Lorem ipsum : <br/>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </section>
@@ -113,7 +121,7 @@
 
                 <h3>Contacts :</h3>
                 <p>mail : lucas.morel@supinfo.com</p>
-                <p>numéro : 07 68 75 10 08</p>
+                <p>numéro : je vais pas laisser ça sur une page aussi accessible</p>
 
             </section>
 
