--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <title>Lucas Morel Portfolio</title>
-    <link rel="icon" href="photo.jpg"/>
+    <link rel="icon" href="images/photo.jpg"/>
     <meta charset="UTF-8"/>
     <link rel="stylesheet" href="CSS/style.css">
    </head>
@@ -120,8 +120,9 @@
             <section id="contacts">
 
                 <h3>Contacts :</h3>
-                <p>mail : lucas.morel@supinfo.com</p>
+                
                 <p>numéro : je vais pas laisser ça sur une page aussi accessible</p>
+                <p>mail : ça non plus</p>
 
             </section>
 
@@ -156,6 +157,7 @@
             <br/>
 
 
+        <a href="Reseaux.html">Mes réseaux</a>
         <nav>
             <a href="#top">Retour en haut</a>
         </nav>
