--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </section>
 
             <section>
-                <p>(Cette page étant statique, le formulaire ci-dessous n'est pas fonctionnelle.)</p>
+                <p>(Cette page étant statique, le formulaire ci-dessous n'est pas fonctionnel.)</p>
 
                 <form action="" method="post">
                     <label for="nom"></label>
