--- a/projets/projets.html
+++ b/projets/projets.html
@@ -17,7 +17,7 @@
     <main>
       <h2>(っ °Д °;)っ Site en construction</h2>
       <section class="Preview-projets">
-        <a href="site e-commerce/index.html">Site e-commerce</a>
+        <a href="site e-commerce/index.html" target="_blank">Site e-commerce</a>
 
 
 
