--- a/projets/site e-commerce/formulaire-contact.html
+++ b/projets/site e-commerce/formulaire-contact.html
@@ -4,7 +4,7 @@
     <title>Support</title>
     <link rel="icon" href="images/photo.jpg"/>
     <meta charset="UTF-8"/>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
